# wolf

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .release-please-config.json  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  api_review.md  format.sh  vcpkg-configuration.json  vcpkg.json
.github/: prerelease-config.json  pull_request_template.md  release-config.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build-artifacts.yml  build.yml  create-release.yml  release-please.yml  release.yml
cmake/: compiler_setup.cmake  flatten_api.cmake  generate_gamestate.cmake  generate_sources.cmake  parse_version.cmake  resource_files.cmake  resources.rc.in  wolf_version.h.in
cmake/toolchains/: llvm-mingw.cmake  mingw-w64.cmake
cmake/vcpkg-overlays/minhook/: portfile.cmake  vcpkg.json
cmake/vcpkg-overlays/triplets/: x64-mingw-static-llvm.cmake
docs/: shop_system.md  wolf_api.md  wolf_imgui.md  wolf_overview.md  wolf_runtime.md
examples/hello_world/: CMakeLists.txt  README.md  hello_world.cpp
examples/minimal_imgui/: CMakeLists.txt  minimal_imgui.cpp
include/: okami.h  wolf.hpp  wolf_function_table.h  wolf_types.h
include/okami/: acquisition.hpp  animals.hpp  bestiarytome.hpp  bitfield.hpp  brushes.hpp  brushtype.hpp  dojotech.hpp  filebuffer.h  fish.hpp  itemparam.hpp  items.hpp  itemtype.hpp  logbook.hpp  maps.hpp  maptype.hpp  movelisttome.hpp  offsets.hpp  savefile.hpp  shopdata.h  straybeads.hpp  structs.hpp  travelguides.hpp  treasures.hpp  wkmath.hpp
include/okami/gamestate/: gamestate.hpp  global.hpp
include/okami/gamestate/maps/: AgataForest.hpp  AgataForestMadameFawnsHouse.hpp  ArkOfYamato.hpp  ArkOfYamatoBlightArena.hpp  ArkOfYamatoCrimsonHelmArena.hpp  ArkOfYamatoNinetailsArena.hpp  ArkOfYamatoOrochiArena.hpp  ArkOfYamatoSpiderQueenArena.hpp  ArkOfYamatoYamiArena.hpp  CalcifiedCavern.hpp  CatcallTower.hpp  CaveOfNagi.hpp  CityCheckpoint.hpp  DiggingMinigame.hpp  DragonPalace.hpp  DragonPalaceStrayBead70Cave.hpp  FishingwithBenkeinexttoHimikosPalace.hpp  FishingwithBenkeionSeianBridge.hpp  FishingwithFishermaninNRyo.hpp  FishingwithKokariInAgata.hpp  FishingwithKokariInKamui.hpp  GaleShrine.hpp  GaleShrineCrimsonHelmArena.hpp  HanaValley.hpp  ImperialPalaceAmmySize.hpp  ImperialPalaceBlightArena.hpp  ImperialPalaceIssunSize.hpp  InnerYoshpet.hpp  InsidetheDragon.hpp  KamikiVillage.hpp  KamikiVillage100yearsago.hpp  Kamui.hpp  (+51 more)
scripts/: flatten_headers.py  generate_gamestate_headers.py
src/api/: README.md  wolf.hpp.in  wolf_bitfield.hpp  wolf_console.hpp  wolf_core.hpp  wolf_framework.hpp  wolf_gui.hpp  wolf_hooks.hpp  wolf_logging.hpp  wolf_memory.hpp  wolf_misc.hpp  wolf_resources.hpp  wolf_shops.hpp
src/devtools/: CMakeLists.txt  README.md  context_summary.md  devdatafinder.cpp  devdatafinder.h  devtools.cpp  devtools_gui.cpp  devtools_gui.h  frametimer.h  gamestateregistry.cpp  gamestateregistry.h  igamestateregistry.h  memory_accessors.h  migration.md  sources.cmake
src/devtools/game-data/: global.yml
src/devtools/game-data/icons/: ap.dds
src/devtools/game-data/maps/: AgataForest.yml  AgataForestMadameFawnsHouse.yml  CalcifiedCavern.yml  CatcallTower.yml  CaveOfNagi.yml  CityCheckpoint.yml  DiggingMinigame.yml  DragonPalace.yml  DragonPalaceStrayBead70Cave.yml  FishingwithKokariInAgata.yml  GaleShrine.yml  GaleShrineCrimsonHelmArena.yml  HanaValley.yml  ImperialPalaceAmmySize.yml  ImperialPalaceBlightArena.yml  ImperialPalaceIssunSize.yml  InnerYoshpet.yml  InsidetheDragon.yml  KamikiVillage.yml  KamikiVillage100yearsago.yml  KamikiVillageGameStart.yml  Kamui.yml  KamuiCherryBomb3Cave.yml  KamuiEzofuji.yml  KamuiEzofujiPowerSlash3Cave.yml  KusaVillage.yml  MoonCave100yearsago.yml  MoonCaveEntrance.yml  MoonCaveInterior.yml  MoonCaveStaircaseandOrochiArena.yml  NRyoshimaCoast.yml  NRyoshimaCoastBanditSpiderArena.yml  NRyoshimaCoastCherryBomb2Cave.yml  NRyoshimaCoastPowerSlash2Cave.yml  NRyoshimaCoastStrayBead63Cave.yml  NewGameIntroCutsceneMap.yml  None.yml  OniIslandExterior.yml  OniIslandLowerInterior.yml  OniIslandNinetailsArena.yml  (+19 more)
src/devtools/game-data/schema/: global.schema.yml  map-state.schema.yml
src/devtools/runtime_tracer/: console.cpp  console.h  event_buffer.h  hooks.cpp  hooks.h  overlay.cpp  overlay.h  state_bit_decoder.cpp  state_bit_decoder.h  symbol_resolver.cpp  symbol_resolver.h  trace_event.h  tracer.cpp  tracer.h  watches.cpp  watches.h
src/loader/: CMakeLists.txt  main.cpp  sources.cmake  wolf-loader.rc.in
src/runtime/: CMakeLists.txt  README.md  bitfieldmonitor.hpp  blowfish.h  console.cpp  console.h  devtools.h  dinput8.cpp  gui.cpp  logger.cpp  modloader.cpp  modloader.h  resource.cpp  sdk_abi_verify.cpp  sources.cmake  wolf_runtime_api.cpp  wolf_runtime_api.h
src/runtime/core/: bitfield_monitoring.cpp  bitfield_monitoring.h  console_system.cpp  console_system.h  crash_handler.cpp  crash_handler.h  game_hooks.cpp  game_hooks.h  gui_system.cpp  gui_system.h  inventory.cpp  inventory.h  logging.cpp  logging.h  memory_access.cpp  memory_access.h  mod_lifecycle.cpp  mod_lifecycle.h  msd_manager.cpp  msd_manager.h  resource_system.cpp  resource_system.h  shop_system.cpp  shop_system.h
src/runtime/filesystem/: blowfish.cpp  msd.cpp  msd.h  resource.cpp  resource.h
src/runtime/hooks/: core_hooks.cpp  core_hooks.h  hooks.cpp  hooks.h  input_hooks.cpp  input_hooks.h  inventory_hooks.cpp  inventory_hooks.h  resource_hooks.cpp  resource_hooks.h  shop_hooks.cpp  shop_hooks.h
src/runtime/memory/: bitfieldmonitor.hpp  dataverify.cpp
src/runtime/utilities/: console.cpp  console.h  gui.cpp  gui.h  logger.cpp  logger.h  shop_registry.cpp  shop_registry.h  window.h
tests/: CMakeLists.txt  test_wolf_api.cpp
tests/core/: test_blowfish.cpp  test_console_system.cpp  test_logging.cpp  test_mocks.cpp  test_mocks.h  test_mod_lifecycle.cpp  test_msd_manager.cpp  test_shop_registry.cpp  test_shop_system.cpp  wolf_version.h
tests/devtools/: CMakeLists.txt  test_event_buffer.cpp  test_state_bit_decoder.cpp  test_watches.cpp
